# rust-conway

./: Cargo.toml  README.md
src/: comm.rs  lib.rs  main.rs  pattern.rs
